[tool.poetry]
name = "krusty"
version = "0.1.0"
description = ""
authors = ["reese-hoffart <reese.hoffart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
krusty = "krusty.krusty:main"
